<resources>
    <string name="app_name">iMail</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>

    <string name="slide_1_title">KULINER</string>
    <string name="slide_1_desc">Rasakan Berbagai Kuliner yang Akan Memanjakan Lidahmu</string>

    <string name="slide_2_title">HOTEL</string>
    <string name="slide_2_desc">Temukan Hotel yang Nyaman Untuk Istirahat Perjalananmu</string>

    <string name="slide_3_title">WISATA</string>
    <string name="slide_3_desc">Destinasi Menarik Menantimu. Segera Pilih Destinasi Wisatamu</string>

    <string name="slide_4_title">GUIDE</string>
    <string name="slide_4_desc">Cari Guide Untuk Menemani Perjalananmu Agar  semakin asyik </string>


    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_commerce">Commerce</string>
    <string name="menu_admin">Admin</string>


    <!-- Project lama -->
    <string name="text_accounts">All Accounts</string>
    <string name="hint_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">PIN</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_pin">Enter PIN</string>
    <string name="success_message">Registration Successful</string>
    <string name="success_message_transfer">Transfer Successful</string>
    <string name="success_message_pin">PIN Change Successful</string>
    <string name="success_message_editprofile">Edit Profile Successful</string>
    <string name="text_home">Back to Home</string>
    <string name="text_pulsa">Kembali ke Paket Pulsa</string>
    <string name="error_username_not_exists">Username is not Exists</string>
    <string name="error_norek_not_exists">Account Number is not Exists</string>
    <string name="error_valid_username_pin">Wrong Username or PIN</string>
    <string name="action_settings">Settings</string>
    <string name="no_hp">No Hp</string>

    <string name="error_message_name_length">Name minimal 2 characters</string>

    <string name="error_message_email_length">Email minimal 6 characters</string>
    <string name="error_message_valid_email">Email must contains at least one alphabet, one number and no whitespace</string>

    <string name="error_message_email_first_alphabet">First character of email must be alphabet</string>
    <string name="error_message_email_alphabet">Email must contain at least one alphabet</string>
    <string name="error_message_email_number">Email must contain at least one number</string>

    <string name="error_message_aemail_first_alphabet">First character of alternate email must be alphabet</string>
    <string name="error_message_valid_aemail">Alternate Email must contains at least one alphabet, one number and no whitespace</string>

    <string name="error_message_aemail_alphabet">Alternate email must contain at least one alphabet</string>
    <string name="error_message_aemail_number">Alternate email must contain at least one number</string>

    <string name="error_message_username_length">Username minimal 6 characters</string>
    <string name="error_message_username_first_alphabet">First character of username must be alphabet</string>
    <string name="error_message_valid_username">Username must contains at least one alphabet, one number and no whitespace</string>

    <string name="error_message_username_alphabet">Username must contain at least one alphabet</string>
    <string name="error_message_username_number">Username must contain at least one number</string>

    <string name="error_message_password_length">Password minimal 8 characters</string>
    <string name="error_message_valid_password">Password must contains at least one lowercase, one uppercase, one number and no whitespace</string>

    <string name="error_message_password_lower_case">Password must contain at least one lower case</string>
    <string name="error_message_password_upper_case">Password must contain at least one upper case</string>
    <string name="error_message_password_number">Password must contain at least one number</string>

    <string name="error_message_oldpassword_length">Old Password minimal 8 characters</string>
    <string name="error_message_valid_oldpassword">Old Password must contains at least one lowercase, one uppercase, one number and no whitespace</string>

    <string name="error_message_oldpassword_lower_case">Old Password must contain at least one lower case</string>
    <string name="error_message_oldpassword_upper_case">Old Password must contain at least one upper case</string>
    <string name="error_message_oldpassword_number">Old Password must contain at least one number</string>

    <string name="error_message_newpassword_length">Password minimal 8 characters</string>
    <string name="error_message_valid_newpassword">New Password must contains at least one lowercase, one uppercase, one number and no whitespace</string>

    <string name="error_message_newpassword_lower_case">Password must contain at least one lower case</string>
    <string name="error_message_newpassword_upper_case">Password must contain at least one upper case</string>
    <string name="error_message_newpassword_number">Password must contain at least one number</string>

    <string name="error_message_email_username">Enter Email/Username</string>
    <string name="error_message_username">Enter Username</string>
    <string name="error_message_samepassword">Password must same with Confirm Password</string>
    <string name="error_message_nohp">Enter No Hp</string>
    <string name="error_message_phone">Enter Phone Number</string>
    <string name="error_message_newpin_oldpin">New PIN must different from Old PIN</string>
    <string name="error_message_newpin_confirmpin">New PIN must same with Confirm PIN</string>
    <string name="error_message_oldpinincorrect">Old PIN was incorrect</string>
    <string name="error_message_passwordkosong">Enter Password</string>
    <string name="error_message_oldpasswordkosong">Enter Old Password</string>
    <string name="error_message_newpasswordkosong">Enter New Password</string>
    <string name="error_message_confirmpasswordkosong">Enter Confirm Password</string>

    <string name="error_message_digitusername">Username must only 6 digits</string>
    <string name="error_message_digitnohp">No Hp range 9 to 13 digits</string>
    <string name="error_message_digitpin">PIN must only 6 digits</string>
    <string name="hint_norek">Account Number</string>
    <string name="error_message_akunalternatif">Enter Email Account Alternative</string>
    <string name="error_message_norek">Enter Nomor Rekening</string>
    <string name="error_valid_message_norektujuan">Enter No Rekening Tujuan yang valid</string>
    <string name="error_valid_message_othernorektujuan">Dilarang menginput No Rek Sendiri</string>
    <string name="error_message_norektujuan">Enter No Rekening Tujuan</string>
    <string name="error_message_jlhdana">Enter Jumlah Dana</string>
    <string name="error_message_jlhdanamin">Enter Jumlah Dana Minimal 50000</string>
    <string name="error_message_jlhdanaminkelipatan">Enter Jumlah Dana Minimal Berkelipatan 50000</string>
    <string name="error_message_saldokurang">Saldo Anda kurang untuk melakukan transfer</string>
    <string name="error_message_jlhdanamax">Jumlah Dana Transfer hanya 100juta per hari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_norektujuan">No Rekening Tujuan</string>
    <string name="hint_nohptujuan">No Hp Tujuan</string>
    <string name="hint_jlhdana">Jumlah Dana</string>
    <string name="hint_jlhpulsa">Jumlah Pulsa</string>
    <string name="hint_oldpin">Old PIN</string>
    <string name="hint_newpin">New PIN</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_submit">Submit</string>
    <string name="text_save">Save</string>

    <string name="hintdomain">@domain.com</string>
    <!-- Spinner -->
    <string-array name="android_layout_arrays">
        <item>Pilih Bulan</item>
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>May</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

    <!-- untuk UserConfig -->
    <string name="user_config">com.example.user_config</string>
    <string name="user_norekening">com.example.user_norekening</string>
    <string name="user_nama">com.example.user_nama</string>
    <string name="user_saldo">com.example.user_saldo</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="favorit">Starred</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>
    <string name="create_folder">Create Folder</string>
    <string name="contact">Contact</string>

    <string name="user_pertama">Vincent</string>
    <string name="user_kedua">Jefri</string>
    <string name="user_email_pertama">vincent@gmail.com</string>
    <string name="user_email_kedua">jefri@gmail.com</string>
    <string name="subject_pertama">Referensi baru dengan judul Implementasi algoritma SVM filter spam SMS</string>
    <string name="message_pertama">Algoritma SVM merupakan algoritma yang mampu menyaring spam jenis SMS.</string>
    <string name="subject_kedua">Transaksi Anda di Marketplace telah berhasil</string>
    <string name="message_kedua">Selamat Anda telah berhasil melakukan transaksi pada Tokopedia.</string>
    <string name="date_pertama">01/01/2019</string>
    <string name="date_kedua">31/03/2019</string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie sapien urna, et tempor lorem feugiat vitae. Mauris vestibulum, nisi a sagittis faucibus, urna nibh tincidunt ligula, ut aliquet massa dui ut tortor. Fusce ex felis, hendrerit at dui et, egestas volutpat tortor. Cras maximus dolor ipsum, in vestibulum augue vehicula in. Sed commodo dapibus diam eget tempus.</string>
</resources>
